--- a/index.html
+++ b/index.html
@@ -22,9 +22,26 @@
   </header>
   <div class="container">
     <div class="text-center mb-5">
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal" id="addTaskBtn">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
+    <div id="dialog-form" title="Add Task">
+
+      <form>
+        <fieldset>
+          <label for="taskTitleInput">Name</label>
+          <input type="text" name="taskTitleInput" id="taskTitle" class="text ui-widget-content ui-corner-all">
+          <label for="TaskDueDateInput">Task Due Date</label>
+          <input type="date" name="TaskDueDateInput" id="TaskDueDate" class="text ui-widget-content ui-corner-all">
+          <label for="taskDescInput">Task Description</label>
+          <textarea type="password" name="taskDescInput" id="taskDesc" class="text ui-widget-content ui-corner-all"></textarea>
+
+          <!-- Allow form submission with keyboard without duplicating the dialog button -->
+          <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+        </fieldset>
+      </form>
+    </div>
+    <!-- End form -->
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
