further work on modal dialog

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal" id="addTaskBtn">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
-    <div id="dialog-form" title="Add Task">
+    <div>
 
-      <form>
+      <form id="dialog-form" title="Add Task">
         <fieldset>
           <label for="taskTitleInput">Name</label>
           <input type="text" name="taskTitleInput" id="taskTitle" class="text ui-widget-content ui-corner-all">
           <label for="TaskDueDateInput">Task Due Date</label>
-          <input type="date" name="TaskDueDateInput" id="TaskDueDate" class="text ui-widget-content ui-corner-all">
+          <input type="date" name="TaskDueDateInput" id="taskDueDate" class="text ui-widget-content ui-corner-all">
           <label for="taskDescInput">Task Description</label>
           <textarea type="password" name="taskDescInput" id="taskDesc" class="text ui-widget-content ui-corner-all"></textarea>
 
