can add/delete tasks

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal" id="addTaskBtn">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
-    <div>
+    <div class="modal">
 
       <form id="dialog-form" title="Add Task">
         <fieldset>
-          <label for="taskTitleInput">Name</label>
+          <label for="taskTitleInput">Task Title</label>
           <input type="text" name="taskTitleInput" id="taskTitle" class="text ui-widget-content ui-corner-all">
           <label for="TaskDueDateInput">Task Due Date</label>
           <input type="date" name="TaskDueDateInput" id="taskDueDate" class="text ui-widget-content ui-corner-all">
