columns are now droppable

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">To Do</h2>
           </div>
-          <div class="card-body bg-light">
+          <div class="card-body bg-light droppable">
             <div id="todo-cards"></div>
           </div>
         </div>
@@ -58,7 +58,7 @@
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">In Progress</h2>
           </div>
-          <div class="card-body bg-light">
+          <div class="card-body bg-light droppable">
             <div id="in-progress-cards"></div>
           </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="card-header bg-white">
               <h2 class="card-title mb-1">Done</h2>
             </div>
-            <div class="card-body bg-light">
+            <div class="card-body bg-light droppable">
               <div id="done-cards"></div>
           </div>
           </div>
