added css for done col., added js to prevent drop outside of columns

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <label for="taskTitleInput">Task Title</label>
           <input type="text" name="taskTitleInput" id="taskTitle" class="text ui-widget-content ui-corner-all">
           <label for="TaskDueDateInput">Task Due Date</label>
-          <input type="date" name="TaskDueDateInput" id="taskDueDate" class="text ui-widget-content ui-corner-all">
+          <input type="date" name="TaskDueDateInput" id="taskDueDate" class="text ui-widget-content ui-corner-all datepicker">
           <label for="taskDescInput">Task Description</label>
           <textarea type="password" name="taskDescInput" id="taskDesc" class="text ui-widget-content ui-corner-all"></textarea>
 
