--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <label for="TaskDueDateInput">Task Due Date</label>
           <input type="date" name="TaskDueDateInput" id="taskDueDate" class="text ui-widget-content ui-corner-all datepicker">
           <label for="taskDescInput">Task Description</label>
-          <textarea type="password" name="taskDescInput" id="taskDesc" class="text ui-widget-content ui-corner-all"></textarea>
+          <textarea name="taskDescInput" id="taskDesc" class="text ui-widget-content ui-corner-all"></textarea>
 
           <!-- Allow form submission with keyboard without duplicating the dialog button -->
           <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
